Update CSV